--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ and we will call you back.</h3>
 						<div class="slider_text">
 							<h1>Nisan Micra.</h1>
 							<h2>— from 30$ day.</h2>
-							<p>#Transmission Automatic <br>
+							<p>#Transmission: Automatic/Mechanic<br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin/Dizel <br>
 							#4 Seats</p>
@@ -91,7 +91,7 @@ and we will call you back.</h3>
 						<div class="slider_text">
 							<h1>Mazda 3.</h1>
 							<h2>— from 46$ day.</h2>
-							<p>#Transmission Automatic/Mechanic/Tiptronic <br>
+							<p>#Transmission: Automatic/Mechanic/Tiptronic <br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin  <br>
 							##5 Seats</p>
@@ -105,10 +105,10 @@ and we will call you back.</h3>
 						<div class="slider_text">
 							<h1>Ford Edge.</h1>
 							<h2>— from 70$ day.</h2>
-							<p>#Transmission Automatic/Tiptronic <br>
+							<p>#Transmission: Automatic/Tiptronic <br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin <br>
-							##5 Seats</p>
+							#5 Seats</p>
 						</div>
 					</div>
 					<div class="slider_item">
@@ -116,7 +116,7 @@ and we will call you back.</h3>
 						<div class="slider_text">
 							<h1>Kia Picanto.</h1>
 							<h2>— from 45$ day.</h2>
-							<p>#Transmission Automatic/Mechanic  <br>
+							<p>#Transmission: Automatic/Mechanic  <br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin/Dizel <br>
 							#4 Seats</p>
@@ -128,7 +128,7 @@ and we will call you back.</h3>
 						<div class="slider_text">
 							<h1>Suzuki SX4.</h1>
 							<h2>— from 65$ day.</h2>
-							<p>#Transmission Automatic/Mechanic/Tiptronic <br>
+							<p>#Transmission: Automatic/Mechanic/Tiptronic <br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin/Gas <br>
 							#5 Seats</p>
