--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ and we will call you back.</h3>
 						<img  id="nisan" class="nisan" src="fiat.png" alt="">
 						<div class="slider_text">
 							<h1>Nisan Micra.</h1>
-							<h2>— from 30$ day.</h2>
+							<h2>— from 30$ a day.</h2>
 							<p>#Transmission: Automatic/Mechanic<br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin/Dizel <br>
@@ -90,11 +90,11 @@ and we will call you back.</h3>
 						<img  id="mazda" class="mazda" src="mazda.png" alt="">
 						<div class="slider_text">
 							<h1>Mazda 3.</h1>
-							<h2>— from 46$ day.</h2>
+							<h2>— from 46$ a day.</h2>
 							<p>#Transmission: Automatic/Mechanic/Tiptronic <br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin  <br>
-							##5 Seats</p>
+							#5 Seats</p>
 						</div>
 					</div>
 
@@ -104,7 +104,7 @@ and we will call you back.</h3>
 						<img id="ford" class="ford" src="ford.png" alt="">
 						<div class="slider_text">
 							<h1>Ford Edge.</h1>
-							<h2>— from 70$ day.</h2>
+							<h2>— from 70$ a day.</h2>
 							<p>#Transmission: Automatic/Tiptronic <br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin <br>
@@ -115,7 +115,7 @@ and we will call you back.</h3>
 						<img src="kia-picanto.png" alt="">
 						<div class="slider_text">
 							<h1>Kia Picanto.</h1>
-							<h2>— from 45$ day.</h2>
+							<h2>— from 45$ a day.</h2>
 							<p>#Transmission: Automatic/Mechanic  <br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin/Dizel <br>
@@ -127,7 +127,7 @@ and we will call you back.</h3>
 						<img src="suzuki.png" alt="">
 						<div class="slider_text">
 							<h1>Suzuki SX4.</h1>
-							<h2>— from 65$ day.</h2>
+							<h2>— from 65$ a day.</h2>
 							<p>#Transmission: Automatic/Mechanic/Tiptronic <br>
 								#Air Conditioner <br>
 								#Fuel Type: Benzin/Gas <br>
