--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</div>
 
 				<div class="mail">
-				<a href="mailto:reservations@we4rent.com">contact@holylalndcars.com</a></div>
+				<a href="mailto:reservations@we4rent.com">reservations@we4rent.com</a></div>
 				</div>
 
 <div class="phoneandmail_mob">
